default font family removed

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <script>
         multiFileUpload.init();
     </script>
+    <style>
+        html{
+            font-family: sans-serif;
+        }
+    </style>
 </body>
 
 </html>
