--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sequential Multi File Upload</title>
+    <title>Sequential Multi File Input</title>
 
-    <link rel="stylesheet" href="./dist/css/multiFileUpload.css">
+    <link rel="stylesheet" href="./dist/css/multiFileInput.css">
 </head>
 
 <body>
 
-    <div class="file-multi-upload-input" id="multiInput1" data-label="Upload documents" data-description="Document description"></div>
+    <div class="sequential-multi-file-input" id="multiInput1" data-label="Upload documents" data-description="Document description"></div>
 
-    <script src="./dist/js/multiFileUpload.js"></script>
+    <script src="./dist/js/multiFileInput.js"></script>
     <script>
-        multiFileUpload.init();
+        multiFileInput.init();
     </script>
     <style>
         html{
