Gulp tasks added

--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sequential Multi File Input</title>
 
-    <link rel="stylesheet" href="./dist/css/multiFileInput.css">
+    <link rel="stylesheet" href="./dist/css/multiFileInput.min.css">
+    <style>
+        html {
+            font-family: sans-serif;
+        }
+    </style>
 </head>
 
 <body>
 
-    <div class="sequential-multi-file-input" id="multiInput1" data-label="Upload documents" data-description="Document description"></div>
+    <div class="sequential-multi-file-input" id="multiInput1" data-label="Upload documents"
+        data-description="Document description"></div>
 
-    <script src="./dist/js/multiFileInput.js"></script>
+    <script src="./dist/js/multiFileInput.min.js"></script>
     <script>
         multiFileInput.init();
     </script>
-    <style>
-        html{
-            font-family: sans-serif;
-        }
-    </style>
+
 </body>
 
 </html>
